frontend/test/should_fail/method_model_inh_ovrrd_failnf.grg
#using "method_model_inh_ovrrd_failnf.gm"
